--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --accent: #000000;
       --bg: #0A0A0A;
       --card-bg: #1A1A1A;
-      --text-primary: #F3F4F6;
+      --text-primary: #111827;
       --text-secondary: #A3A3A3;
       --border: #2D2D2D;
       --highlight: #2A2A2A;
@@ -27,6 +27,8 @@
       --glow: rgba(0, 0, 0, 0.5);
       --nebula-blue: rgba(30, 58, 138, 0.5);
       --nebula-dark: rgba(0, 0, 0, 0.3);
+      --user-bubble: #DCF8C6;
+      --ai-bubble: #1A1A1A;
     }
 
     [data-theme="light"] {
@@ -39,6 +41,8 @@
       --glow: rgba(0, 0, 0, 0.3);
       --nebula-blue: rgba(59, 130, 246, 0.4);
       --nebula-dark: rgba(0, 0, 0, 0.2);
+      --user-bubble: #DCF8C6;
+      --ai-bubble: #FFFFFF;
     }
 
     body {
@@ -93,23 +97,24 @@
     }
 
     .message {
-      max-width: 80%;
-      padding: 0.75rem;
-      border-radius: 1rem;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      max-width: 70%;
+      margin: 0.5rem 1rem;
+      position: relative;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      gap: 0.25rem;
     }
 
     .message-content {
       max-width: 100%;
       box-sizing: border-box;
-      border-radius: 0.75rem;
+      border-radius: 1rem;
       display: flex;
       gap: 0.5rem;
       align-items: flex-start;
       overflow: hidden;
+      padding: 0.5rem 0.75rem;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
     .message-content .scrollable-content {
@@ -119,30 +124,30 @@
       overflow-y: auto;
       white-space: pre-wrap;
       word-wrap: break-word;
-      padding: 0.5rem;
-      box-sizing: border-box;
+      font-size: 0.9rem;
+      line-height: 1.4;
     }
 
     .message-content .scrollable-content pre,
     .message-content .scrollable-content code {
       margin: 0;
       white-space: pre-wrap;
-      font-size: 0.875rem;
+      font-size: 0.85rem;
     }
 
     .message-content .scrollable-content::-webkit-scrollbar {
-      width: 8px;
-      height: 8px;
+      width: 6px;
+      height: 6px;
     }
 
     .message-content .scrollable-content::-webkit-scrollbar-track {
       background: var(--highlight);
-      border-radius: 4px;
+      border-radius: 3px;
     }
 
     .message-content .scrollable-content::-webkit-scrollbar-thumb {
       background: var(--accent);
-      border-radius: 4px;
+      border-radius: 3px;
     }
 
     .message-content .scrollable-content::-webkit-scrollbar-thumb:hover {
@@ -151,30 +156,62 @@
 
     .message.user {
       align-self: flex-end;
-      background: linear-gradient(135deg, var(--primary), var(--accent));
-      color: var(--white);
+      background: var(--user-bubble);
+      color: var(--text-primary);
+    }
+
+    .message.user .message-content {
+      border-radius: 1rem 1rem 0 1rem;
+      position: relative;
+    }
+
+    .message.user .message-content::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      right: -10px;
+      border: 10px solid transparent;
+      border-bottom-color: var(--user-bubble);
+      border-right-color: var(--user-bubble);
+      transform: rotate(45deg);
     }
 
     .message.user .scrollable-content {
       background: transparent;
-      color: var(--white);
+      color: var(--text-primary);
     }
 
     .message.ai {
       align-self: flex-start;
-      background: var(--card-bg);
+      background: var(--ai-bubble);
       border: 1px solid var(--border);
     }
 
+    .message.ai .message-content {
+      border-radius: 1rem 1rem 1rem 0;
+      position: relative;
+    }
+
+    .message.ai .message-content::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: -10px;
+      border: 10px solid transparent;
+      border-bottom-color: var(--ai-bubble);
+      border-left-color: var(--ai-bubble);
+      transform: rotate(-45deg);
+    }
+
     .message.ai .scrollable-content {
-      background: var(--card-bg);
+      background: var(--ai-bubble);
       color: var(--text-primary);
     }
 
     .typing-dot {
-      width: 8px;
-      height: 8px;
-      background: var(--accent);
+      width: 6px;
+      height: 6px;
+      background: var(--text-secondary);
       border-radius: 50%;
       animation: typing 1.2s infinite;
     }
@@ -350,11 +387,12 @@
         font-size: 1rem;
       }
       .message {
-        max-width: 90%;
-        padding: 0.5rem;
+        max-width: 85%;
+        margin: 0.25rem 0.5rem;
       }
       .message-content .scrollable-content {
         max-height: 300px;
+        font-size: 0.85rem;
       }
       .language-select {
         font-size: 0.75rem;
@@ -406,7 +444,7 @@
       </div>
       <div class="welcome-message text-xl font-semibold text-center" id="welcome-message">Hey! I'm Vynix AI. What's on your mind?</div>
     </div>
-    <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-3 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
+    <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-2 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
     <div class="chat-input-container fixed bottom-1 left-1 right-1 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center z-20" id="chat-input-container">
       <input type="text" id="chat-input" class="flex-1 bg-transparent p-2 text-[var(--text-primary)] outline-none focus:ring-2 focus:ring-[var(--focus)] rounded-full" placeholder="Type your question..." aria-label="Type your question" maxlength="800">
       <button id="send-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-2.5 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="Toggle voice">
@@ -738,8 +776,11 @@
         elements.chatMessages.innerHTML = '';
       }
       elements.welcomeContainer.classList.remove('hidden');
-      elements.chatMessages.classList.add('hidden');
+      elements.chatMessages.classList.remove('hidden');
       startNebulaAnimation();
+      if (state.voiceEnabled) {
+        playElevenLabsAudio("Hey! I'm Vynix AI. What's on your mind?");
+      }
     }
 
     elements.newChatButton.addEventListener('click', clearChat);
@@ -751,12 +792,12 @@
         return;
       }
       const div = document.createElement('div');
-      div.className = `message ${msg.sender} flex flex-col gap-2 slide-in`;
+      div.className = `message ${msg.sender} flex flex-col gap-1 slide-in`;
       div.role = 'listitem';
       const content = document.createElement('div');
-      content.className = 'message-content p-3 rounded-xl flex gap-2 items-start';
+      content.className = 'message-content flex gap-2 items-start';
       const avatar = document.createElement('div');
-      avatar.className = 'message-avatar w-8 h-8 rounded-full flex-shrink-0';
+      avatar.className = 'message-avatar w-6 h-6 rounded-full flex-shrink-0 mt-1';
       if (msg.sender === 'ai') {
         const img = document.createElement('img');
         img.src = state.aiAvatar;
@@ -766,43 +807,43 @@
         avatar.appendChild(img);
       } else {
         avatar.textContent = state.userName[0].toUpperCase();
-        avatar.classList.add('bg-gradient-to-r', 'from-[var(--primary)]', 'to-[var(--accent)]', 'text-white', 'flex', 'items-center', 'justify-center', 'font-bold');
+        avatar.classList.add('bg-gradient-to-r', 'from-[var(--primary)]', 'to-[var(--accent)]', 'text-white', 'flex', 'items-center', 'justify-center', 'font-bold', 'text-xs');
       }
       const body = document.createElement('div');
       body.className = 'flex-1';
       const header = document.createElement('div');
-      header.className = 'message-header font-semibold text-xs';
+      header.className = 'message-header font-semibold text-[0.7rem]';
       header.textContent = msg.displayName;
       const scrollable = document.createElement('div');
       scrollable.className = 'scrollable-content';
       const text = document.createElement('div');
-      text.className = 'text-xs';
+      text.className = 'text-[0.9rem]';
       text.innerHTML = marked.parse(msg.text);
       scrollable.appendChild(text);
       const time = document.createElement('div');
-      time.className = 'message-timestamp text-[0.65rem] text-[var(--text-secondary)] mt-1';
+      time.className = 'message-timestamp text-[0.6rem] text-[var(--text-secondary)] mt-0.5';
       time.textContent = new Date(msg.timestamp).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'});
       body.append(header, scrollable, time);
       content.append(avatar, body);
       div.append(content);
       const actions = document.createElement('div');
-      actions.className = 'message-actions flex gap-3 mt-1 self-end';
+      actions.className = 'message-actions flex gap-2 mt-0.5 self-end';
       const copyBtn = document.createElement('button');
-      copyBtn.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--accent)] transition';
-      copyBtn.innerHTML = '<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>';
+      copyBtn.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--accent)] transition text-xs';
+      copyBtn.innerHTML = '<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>';
       copyBtn.ariaLabel = 'Copy message';
       copyBtn.addEventListener('click', () => navigator.clipboard.writeText(msg.text).then(() => showToast('Copied!', 'success')).catch(() => showToast('Copy failed', 'error')));
       if (msg.sender === 'ai') {
         const thumbsUp = document.createElement('button');
-        thumbsUp.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--success)] transition';
-        thumbsUp.innerHTML = '<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3"/></svg>';
+        thumbsUp.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--success)] transition text-xs';
+        thumbsUp.innerHTML = '<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3"/></svg>';
         thumbsUp.ariaLabel = 'Good response';
         thumbsUp.addEventListener('click', () => {
           showToast('Thanks for the feedback! I learned from this.', 'success');
         });
         const thumbsDown = document.createElement('button');
-        thumbsDown.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--error)] transition';
-        thumbsDown.innerHTML = '<svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M10 15v4a3 3 0 003 3l4-9V2H5.72a2 2 0 00-2 1.7l-1.38 9a2 2 0 002 2.3zm7-13h2.67A2.31 2.31 0 0122 4v7a2.31 2.31 0 01-2.33 2H17"/></svg>';
+        thumbsDown.className = 'action-btn text-[var(--text-secondary)] hover:text-[var(--error)] transition text-xs';
+        thumbsDown.innerHTML = '<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M10 15v4a3 3 0 003 3l4-9V2H5.72a2 2 0 00-2 1.7l-1.38 9a2 2 0 002 2.3zm7-13h2.67A2.31 2.31 0 0122 4v7a2.31 2.31 0 01-2.33 2H17"/></svg>';
         thumbsDown.ariaLabel = 'Bad response';
         thumbsDown.addEventListener('click', () => {
           showToast('Sorry about that! Please provide a better response.', 'error');
@@ -822,24 +863,17 @@
     }
 
     async function appendMessage(text, sender, displayName) {
-      if (isVoiceMode) {
-        return; // Suppress text messages in voice mode
-      }
-      if (!elements.chatMessages) {
-        console.error("Chat messages element not found");
-        showToast("Failed to append message: UI element missing.", 'error');
-        return;
-      }
       const msg = {id: Date.now().toString(), text, sender, displayName, timestamp: Date.now()};
       state.messages.push(msg);
       elements.welcomeContainer.classList.add('hidden');
       stopNebulaAnimation();
+      elements.chatMessages.classList.remove('hidden');
       if (sender === 'user') {
         renderMessage(msg, msg.id);
       } else {
         const tempMsg = {...msg, text: ''};
         const el = renderMessage(tempMsg, msg.id);
-        const p = el.querySelector('.scrollable-content .text-xs');
+        const p = el.querySelector('.scrollable-content .text-[0.9rem]');
         const indicator = document.createElement('span');
         indicator.className = 'typing-indicator inline-flex gap-1 ml-1';
         for (let i = 0; i < 3; i++) {
@@ -995,10 +1029,7 @@
 
       if (isMicrophone && SpeechRecognition) {
         isVoiceMode = true;
-        elements.welcomeContainer.classList.remove('hidden');
-        elements.chatMessages.classList.add('hidden');
         elements.sendButton.disabled = true;
-        startNebulaAnimation();
         showToast('Listening...', 'success');
 
         vibrate(200);
@@ -1020,8 +1051,12 @@
           }
 
           try {
+            await appendMessage(sanitize(transcript), 'user', state.userName);
             const aiResponse = await getAIResponse(transcript);
-            await playElevenLabsAudio(aiResponse);
+            await appendMessage(aiResponse, 'ai', 'Vynix AI');
+            if (state.voiceEnabled) {
+              await playElevenLabsAudio(aiResponse);
+            }
           } catch (error) {
             showToast('Error processing voice input.', 'error');
             console.error(error);
@@ -1092,7 +1127,6 @@
     function endVoiceMode() {
       isVoiceMode = false;
       elements.sendButton.disabled = false;
-      elements.welcomeContainer.classList.remove('hidden');
       updateSendIcon();
       if (recognition) {
         recognition.stop();
@@ -1122,6 +1156,9 @@
       startNebulaAnimation();
       updateSendIcon();
       initializeFirebase();
+      if (state.voiceEnabled) {
+        playElevenLabsAudio("Hey! I'm Vynix AI. What's on your mind?");
+      }
     });
   </script>
 </body>
